# concept-competition

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml  pytest.ini  requirements-build.txt  requirements-dev.txt  requirements-mac.txt  requirements-vllm.txt  requirements.txt
.github/workflows/: ci.yml
concept_scorer/: __init__.py  backends.py  cli.py  config.py  errors.py  generation.py  model_runtime.py  prompts.py  schemas.py  scorer.py  steering.py  submission.py  version.py  vllm_backend.py
concept_scorer/api/: app.py  routes.py
concept_scorer/detectors/: __init__.py  afinn.py  base.py  birthday_cake.py  classifier_base.py  hedging.py  medical_disclaimer.py  positive_sentiment.py  regex_base.py  weighted_regex_base.py
concept_scorer/detectors/data/: AFINN_NOTICE.txt
concept_scorer/weather/: __init__.py  detector.py  reference_direction.safetensors
config/: competition.dev.yaml  competition.yaml
scripts/: build_freeze_pool.py  build_weather_reference.py  download_model.py  example_submission_generator.py  rescore_baseline_pool.py
tests/: conftest.py  safetensors_util.py  test_api_unit.py  test_backend_parity.py  test_backend_parity_gpu.py  test_config.py  test_detectors.py  test_gpu_smoke.py  test_prompts.py  test_scorer.py  test_steering.py  test_submission.py  test_vllm_backend.py
