[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "concept-scorer"
version = "0.1.0"
description = "Self-contained steering-submission scorer for the Apex Steering Competition (Gemma 4)"
requires-python = ">=3.11,<3.14"  # torch 2.5.1 has no cp314+ wheels; cap to a supported interpreter
dependencies = [
    # Pinned exactly in requirements.txt for reproducible image builds.
    "pyyaml",
    "pydantic>=2",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
]

[project.optional-dependencies]
# CUDA-only high-throughput backend. NOT installed by the base `pip install` (vLLM has no
# Apple/MPS wheel). Pin the exact version in requirements on the CUDA image build once the
# Phase 0 quantization/engine decisions land. Install with: pip install '.[vllm]'
vllm = ["vllm"]

[project.scripts]
concept-scorer = "concept_scorer.cli:main"

[tool.setuptools.packages.find]
include = ["concept_scorer*"]

[tool.setuptools.package-data]
"concept_scorer.weather" = ["*.safetensors"]
"concept_scorer.detectors" = ["data/*.txt"]
